Removed some comments and some suggestions by IntelliJ